<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login">

    <EditText
            android:id="@+id/edtCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginLeft="72dp"
            android:layout_marginBottom="12dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/edtPassword"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:id="@+id/edtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginLeft="72dp"
            android:layout_marginBottom="12dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/btnIngresar"
            app:layout_constraintStart_toStartOf="parent"/>

    <Button
            android:id="@+id/btnIngresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="136dp"
            android:layout_marginLeft="136dp"
            android:layout_marginBottom="232dp"
            android:background="#C12196F3"
            android:text="@string/ingresar"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:id="@+id/textView2"
            android:layout_width="146dp"
            android:layout_height="53dp"
            android:layout_marginStart="136dp"
            android:layout_marginLeft="136dp"
            android:layout_marginBottom="84dp"
            android:text="@string/tracking"
            android:textAllCaps="false"
            android:textColor="#DD0732"
            android:textColorHint="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/edtCorreo"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:id="@+id/tvErrorLogin"
            android:layout_width="379dp"
            android:layout_height="44dp"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginBottom="404dp"
            android:textColor="#B31010"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/logo_movon" android:id="@+id/imageView2"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="104dp" android:layout_marginStart="104dp"
            android:contentDescription="@string/movon"/>

</androidx.constraintlayout.widget.ConstraintLayout>