<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/consultar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnConsultar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="508dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="252dp" android:layout_marginStart="252dp"
            android:textColorHighlight="@color/colorAccent" android:background="#22F62C" android:textColor="#FFFFFF"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtGuia"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="512dp" android:hint="@string/guia" android:autofillHints=""/>
    <TextView
            android:layout_width="221dp"
            android:layout_height="40dp" android:id="@+id/tvTitulo"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/edtGuia" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="104dp" android:layout_marginStart="104dp"
            android:text="@string/validaci_n_de_registro"
            android:textColor="#DF1708" android:textSize="20sp"/>
    <TextView
            android:layout_width="309dp"
            android:layout_height="38dp" android:id="@+id/tvNoRegistro"
            android:textColor="#F44336"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="468dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp" android:textSize="18sp"/>
    <TextView
            android:layout_width="281dp"
            android:layout_height="48dp" android:id="@+id/tvLotes"
            android:textSize="18sp" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="47dp"
            android:layout_marginStart="47dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="420dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="90dp"
            android:layout_height="393dp"
            android:id="@+id/layoutItems" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="12dp" android:layout_marginStart="12dp">
    </LinearLayout>
    <Button
            android:text="@string/escanear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnEscanear"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="360dp" android:layout_marginLeft="104dp" android:layout_marginStart="104dp"
            app:layout_constraintStart_toEndOf="@+id/layoutItems"/>
    <Button
            android:text="@string/validar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnValidar"
            android:layout_marginLeft="104dp" android:layout_marginStart="104dp"
            app:layout_constraintStart_toEndOf="@+id/layoutItems" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="292dp"/>
    <TextView
            android:layout_width="159dp"
            android:layout_height="189dp" android:id="@+id/tvLoteValidado"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" android:layout_marginLeft="76dp" android:layout_marginStart="76dp"
            app:layout_constraintStart_toEndOf="@+id/layoutItems"/>
    <TextView
            android:layout_width="157dp"
            android:layout_height="58dp" android:id="@+id/tvErrorLote"
            android:layout_marginLeft="77dp" android:layout_marginStart="77dp"
            app:layout_constraintStart_toEndOf="@+id/layoutItems" android:layout_marginBottom="13dp"
            app:layout_constraintBottom_toTopOf="@+id/tvLoteValidado"/>

</androidx.constraintlayout.widget.ConstraintLayout>